Inserindo imagem no README

--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-Calculadora IMC criada apenas com HTML CSS e JS Vanilla
+<h1>CALCULADORA IMC</h1>
+
+<hr>
+<p>Calculadora IMC criada apenas com HTML CSS e JS Vanilla</p>
+
+<img src="/img/imgCalculadora IMC.png" alt="Calculadora IMC IMG">
